--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialize=true
 spring.datasource.initialization-mode=always
 #spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.url= jdbc:postgresql://localhost:5432/localhostafcgraphicsdemo
+spring.datasource.url= jdbc:postgresql://localhost:5432/Campustagram
 spring.datasource.username=postgres
 spring.datasource.password=toor
 
