--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ##SYSTEM SETTINGS
 system.register.verifyEmail=true
 #system.register.verifyEmail=false
-#system.sendmail=true
-system.sendmail=false
+system.sendmail=true
+#system.sendmail=false
 
 server.servlet.context-path=/
 server.port=8081
